Name:          PMerge
Version:       0.1
Description:   Merge pipes with stdin
License:       BSD4
License-file:  LICENSE
Author:        Jonathan Rockway
Maintainer:    jon@jrock.us
Build-Type:    Simple
Cabal-Version: >= 1.2
Executable pmerge
  Main-is: pmerge.hs
  Other-Modules: PMerge.Merge
  Build-Depends: base, unix, mtl, MissingH
  ghc-options:   -O
